# alpha-explorer

./: .gitignore  Cargo.toml  README.md
mk/mk/: Cargo.toml
mk/mk/src/: engine.rs  engine_context.rs  engine_diagnostic.rs  engine_error.rs  engine_gfx.rs  handles.rs  lib.rs
mk/mk/src/animation/: interpolatable.rs  mod.rs
mk/mk/src/api/: asset.rs  entity.rs  event.rs  lua_manager.rs  mod.rs  screen.rs  time.rs
mk/mk/src/api/coroutine/: coroutine.rs  mod.rs
mk/mk/src/asset/: asset_cache_manager.rs  asset_load_error.rs  asset_loader.rs  asset_manager.rs  base_asset_cache_manager.rs  base_asset_loader.rs  mod.rs
mk/mk/src/asset/loader/: audio_clip_loader.rs  font_loader.rs  mod.rs  shader_loader.rs  sprite_atlas_grid_loader.rs  sprite_atlas_loader.rs  sprite_loader.rs  sprite_nine_patch_loader.rs  tilemap_loader.rs
mk/mk/src/audio/: audio_channel.rs  audio_clip.rs  audio_manager.rs  mod.rs
mk/mk/src/codegen_traits/: animate.rs  lua_api_table.rs  mod.rs
mk/mk/src/component/: alpha_tilemap_renderer.rs  audio_source.rs  camera.rs  diagnostic.rs  glyph_renderer.rs  mod.rs  nine_patch_renderer.rs  not_yet_complete.rs  rect_mask.rs  single_animator.rs  size.rs  sprite_renderer.rs  tilemap_renderer.rs  transform.rs  ui_element.rs  ui_mask.rs  ui_scaler.rs
mk/mk/src/component/glyph_renderer/: glyph_renderer_bind_group_allocator.rs  mod.rs
mk/mk/src/component/sprite_renderer/: mod.rs  sprite_renderer_bind_group_allocator.rs
mk/mk/src/diagnostic/: diagnostic.rs  diagnostic_manager.rs  diagnostic_object_builder.rs  mod.rs
mk/mk/src/event/: entity_event_handler.rs  entity_event_manager.rs  event.rs  event_dispatcher.rs  event_handler.rs  event_manager.rs  event_type.rs  lua_event.rs  mod.rs  native_event.rs  typed_event_bus.rs  typed_event_listener.rs
mk/mk/src/event/events/: diagnostic.rs  input.rs  lifecycles.rs  mod.rs  per_entity.rs
mk/mk/src/gfx/: alpha_tile.rs  alpha_tilemap.rs  alpha_tileset.rs  mod.rs  render_manager.rs  sprite.rs  sprite_render_mode.rs  sprite_slice.rs  texture.rs  tilemap.rs
mk/mk/src/gfx/glyph/: glyph_manager.rs  glyph_sprite.rs  glyph_texture.rs  mod.rs
mk/mk/src/gfx/low/: mod.rs  render_pipeline_allocator.rs  stencil_texture.rs
mk/mk/src/gfx/low/frame_memory_allocator/: device_memory_allocator.rs  host_memory_allocator.rs  memory_allocator.rs  mod.rs  single_device_memory_allocator.rs  single_host_memory_allocator.rs  single_memory_allocator.rs
mk/mk/src/glyph/: glyph_manager.rs  glyph_texture.rs  mod.rs
mk/mk/src/input/: button.rs  channel.rs  device.rs  driver.rs  input_manager.rs  input_map.rs  input_type.rs  mod.rs  trigger.rs
mk/mk/src/input/drivers/: keyboard.rs  mod.rs
mk/mk/src/looper/: gfx_looper.rs  logic_looper.rs  mod.rs
mk/mk/src/render/: alpha_tile.rs  alpha_tilemap.rs  alpha_tileset.rs  clear_mode.rs  color.rs  glyph_manager.rs  glyph_texture.rs  layer.rs  mod.rs  render_manager.rs  screen_manager.rs  sprite.rs  sprite_atlas.rs  sprite_atlas_grid.rs  sprite_nine_patch.rs  tilemap.rs
mk/mk/src/res/: mod.rs
mk/mk/src/script/: mod.rs  module_cache_manager.rs  script_manager.rs
mk/mk/src/script/api/: mod.rs
mk/mk/src/script/api/asset/: mod.rs
mk/mk/src/script/api/audio/: audio_clip.rs  mod.rs
mk/mk/src/script/api/component/: alpha_tilemap_renderer.rs  audio_source.rs  camera.rs  diagnostic.rs  glyph_renderer.rs  mod.rs  nine_patch_renderer.rs  size.rs  sprite_renderer.rs  tilemap_renderer.rs  transform.rs  ui_element.rs  ui_image_renderer.rs  ui_mask.rs  ui_scaler.rs
mk/mk/src/script/api/entity/: entity.rs  entity_builder.rs  mod.rs
mk/mk/src/script/api/event/: diagnostic.rs  event.rs  input.rs  lifecycles.rs  mod.rs  per_entity.rs  ui.rs
mk/mk/src/script/api/gfx/: alpha_tile.rs  alpha_tilemap.rs  alpha_tileset.rs  clear_mode.rs  color.rs  font.rs  glyph_layout_config.rs  horizontal_align.rs  layer.rs  mod.rs  shader.rs  sprite.rs  sprite_atlas.rs  sprite_atlas_grid.rs  sprite_slice.rs  sprite_texel_mapping.rs  texture.rs  tilemap.rs  wrap_style.rs
mk/mk/src/script/api/glyph/: glyph_layout_config.rs  horizontal_align.rs  mod.rs  vertical_align.rs  wrap_style.rs
mk/mk/src/script/api/render/: alpha_tile.rs  font.rs  (+15 more)
mk/mk/src/script/conversion/: value.rs
mk/mk/src/script/ffi/: error.rs  function.rs  mod.rs  table.rs  thread.rs  userdata.rs  value.rs
mk/mk/src/service/: gpu_service.rs  mod.rs
mk/mk/src/structure/: # 기획서.md  mat22.rs  mat22_mut.rs  mat22_ref.rs  mat33.rs  mat33_mut.rs  mat33_ref.rs  mod.rs  size.rs  vec2.rs  vec3.rs
mk/mk/src/system/: animate_single_animators.rs  audio_system.rs  mod.rs  render_system.rs  renderer_system.rs  size_system.rs  system.rs  system_manager.rs
mk/mk/src/system/render_system_new/: # UI 개선 방안.md  camera_clip_area.rs  mod.rs
mk/mk/src/test/: mod.rs
mk/mk/src/time/: mod.rs  time_manager.rs
mk/mk/src/transform/: mod.rs  transform.rs  transform_allocator.rs  transform_flattener.rs  transform_hierarchy.rs  transform_manager.rs  transform_name_manager.rs
mk/mk/src/ui/: mod.rs  ui_anchor.rs  ui_element.rs  ui_event_manager.rs  ui_image_render_mode.rs  ui_layout_calculator.rs  ui_manager.rs  ui_margin.rs  ui_scale_mode.rs
mk/mk/src/util/: box_id.rs  mod.rs
mk/mk_script/: Cargo.toml
mk/mk_script_ast/: Cargo.toml
mk/mk_script_ast/src/: lib.rs
mk/mk_script_high_lexer/: Cargo.toml
mk/mk_script_high_lexer/src/: lib.rs  symbols.rs
mk/mk_script_high_lexer/src/token/: token.rs  token_kind.rs  token_literal.rs  token_literal_kind.rs
mk/mk_script_parser/: Cargo.toml
mk/mk_script_parser/src/: cursor.rs  lib.rs  parser.rs  test.mks
mk/render/: Cargo.toml  build.rs
mk/render/gl33/: Cargo.toml  build.rs
mk/render/src/: lib.rs  native_handle.rs  object.rs  render_mode.rs  shader_type.rs  texture_format.rs
mk/render/src/gl33/: buffer.rs  mod.rs  render_request.rs  renderer.rs  shader.rs  stencil_fn.rs  stencil_op.rs  texture.rs
mk/res/: Cargo.toml
mk/res/src/: lib.rs  resource.rs
mk/res/src/io/: asset_loader.rs  meta_loader.rs  mod.rs  writer.rs
mk/res/src/io/decoder/: text.rs
mk/res/src/io/encoder/: mod.rs  sprite.rs  text.rs
(+101 files in other folders)
