[package]
name = "mk"
version = "0.1.0"
edition = "2021"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "../codegen" }
res = { path = "../res", features = ["asset_loader", "meta_loader"] }

# Third parties
anyhow = { version = "1" }
bitvec = { version = "1" }
bumpalo = { version = "3", features = ["collections"] }
crossbeam = { version = "0.8" }
colored = { version = "2" }
downcast-rs = { version = "1" }
fontdue = { version = "0.7" }
image = { version = "0.24" }
itertools = { version = "0.10" }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
parking_lot = { version = "0.12" }
rodio = { version = "0.16" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
smartstring = { version = "1" }
specs = { version = "0.18", features = ["derive"] }
thiserror = { version = "1" }
# wrapped2d = { version = "0.4" }
winit = { version = "0.27" }
wgpu = { version = "0.14" }

[features]
res_writer = ["res/writer"]

[profile.release]
debug = true
