[package]
name = "mk_script"
version = "0.1.0"
edition = "2021"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../mk_script_ast" }
diagnostic = { path = "../mk_script_diagnostic" }
high_lexer = { path = "../mk_script_high_lexer" }
low_lexer = { path = "../mk_script_low_lexer" }
span = { path = "../mk_script_span" }
str_interner = { path = "../mk_script_str_interner" }
